--- a/countdown/index.html
+++ b/countdown/index.html
@@ -18,7 +18,7 @@
 <body>
 <div class="col-md-8 col-md-offset-2">
 
-    <audio autoplay="autoplay" controls="controls" loop="loop" preload="auto" src="{{asset('mp3/dengziqi.m4a')}}">
+    <audio autoplay="autoplay" controls="controls" loop="loop" preload="auto" src="dengziqi.mp3">
         你的浏览器不支持音乐播放，请使用chrome
     </audio>
 
