--- a/firecracker/index.html
+++ b/firecracker/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-<div class="col-md-8 col-md-offset-2">
+<div style="width:100%;">
 
    <canvas id="canvas_static" style="border: 0px solid #aaaaaa;display: block;margin: 0 auto;position: absolute;top: 5px;z-index: 0">
         你的浏览器不支持，请使用chrome
