--- a/firecracker/index.html
+++ b/firecracker/index.html
@@ -16,12 +16,12 @@
 
 </head>
 <body>
-<div style="width:100%;">
+<div >
 
-   <canvas id="canvas_static" style="border: 0px solid #aaaaaa;display: block;margin: 0 auto;position: absolute;top: 5px;z-index: 0">
+   <canvas id="canvas_static" style="width: 100%;border: 0px solid #aaaaaa;display: block;margin: 0 auto;position: absolute;top: 5px;z-index: 0">
         你的浏览器不支持，请使用chrome
     </canvas>
-    <canvas id="canvas" style="border: 0px solid #aaaaaa;display: block;margin: 0 auto;position: absolute;top: 5px;z-index: 1">
+    <canvas id="canvas" style="width: 100%;border: 0px solid #aaaaaa;display: block;margin: 0 auto;position: absolute;top: 5px;z-index: 1">
         你的浏览器不支持，请使用chrome
     </canvas>
 
